--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid greenyellow;
+    /* border: 1px solid greenyellow; */
 }
 
 a {
@@ -99,4 +99,26 @@ ul li {
 
 li label {
     font-variant: small-caps;
+}
+
+input {
+    background-color: #FFf9fafb;
+    border: 1px solid #E5E7EB;
+    border-radius: 3px;
+    width: 100%;
+    padding: 7px;
+    font-size: 14px;
+    margin-bottom: 15px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+input:focus {
+    outline: 0;
+    border: 1px solid blue;
+    box-shadow: 6px 3px 3px gray;
+}
+
+input:invalid {
+    border-color: red;
 }
