--- a/styles.css
+++ b/styles.css
@@ -2,123 +2,126 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: 1px solid greenyellow; */
-}
-
-a {
+  }
+  
+  a {
     color: inherit;
-    text-decoration: none;
     text-decoration: underline;
-}
-
-html,
-body {
-  height: 100%;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.left {
+  }
+  
+  html,
+  body {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .left {
     width: 40%;
-    height:100vh;
+    height: 100vh;
     float: left;
-    
-    background-image: url(./img/greg-rosenke-cq2_Wg8Ebd4-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-
+    background: url(./img/greg-rosenke-cq2_Wg8Ebd4-unsplash.jpg) no-repeat center / cover;
     position: relative;
-}
-
-.left .logo-prominent {
+  }
+  
+  .left .logo-prominent {
     position: absolute;
     top: 20%;
     font-size: 3rem;
-    background-color: rgb(0, 0, 0, 0.5);
-    padding: 0.5em 0 0.5em 0;
-
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 0.5em;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
     display: flex;
     flex-wrap: wrap;
+    gap: 5%;
     align-items: center;
     justify-content: center;
-    gap: 2vw;
-}
-
-.logo-prominent img {
-    filter: invert(100%);
-    height: 7vw;
-    min-height: 70px;
-    }
-
-.logo-prominent :is(img, p) {
-    margin: 0 0 0 0;
-}
-
-.left .photo-attribution {
-    position: absolute;
-    bottom: 0;
-    font-size: 0.875rem;
-}
-
-.left :is(.logo-prominent, .photo-attribution) {
     color: white;
     text-align: center;
     width: 100%;
-}
-
-.right {
+  }
+  
+  .logo-prominent img {
+    filter: invert(100%);
+    height: 7vw;
+    min-height: 70px;
+    margin: 0;
+  }
+  
+  .left .photo-attribution {
+    position: absolute;
+    bottom: 0;
+    font-size: 0.875rem;
+    color: white;
+    text-align: center;
+    width: 100%;
+  }
+  
+  .right {
     width: 60%;
     height: 100vh;
     float: right;
     box-sizing: border-box;
-    line-height: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
+  }
 
-ul {
+  .encourage {
+    margin-left: 20px;
+    font-size: 1.3rem;
+    margin-bottom: 4%;
+    max-width: 50ch;
+    font-weight: 600;
+  }
+
+  ul {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
     list-style: none;
-}
-
-ul li {
-    width: calc(50% - 20px);
-    padding: 10px;
-    margin: 10px;
+    margin: 0;
+    padding: 0;
+  }
+  
+  ul li {
+    width: calc(45% - 60px);
     box-sizing: border-box;
-    min-width: fit-content;
     display: flex;
     flex-direction: column;
+    margin-right: 40px;
+    min-width: fit-content;
   }
-
-li label {
+  
+  li label {
     font-variant: small-caps;
-}
-
-input {
+  }
+  
+  input {
     background-color: #FFf9fafb;
     border: 1px solid #E5E7EB;
-    border-radius: 3px;
-    width: 100%;
-    padding: 7px;
-    font-size: 14px;
-    margin-bottom: 15px;
-    padding: 5px;
     border-radius: 5px;
-}
-
-input:focus {
+    font-size: 14px;
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 1%;
+  }
+  
+  input:focus {
     outline: 0;
     border: 1px solid blue;
     box-shadow: 6px 3px 3px gray;
-}
-
-input:invalid {
+  }
+  
+  input:invalid {
     border-color: red;
-}
+  }
+
+  .action {
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+  }
+
+  .action p {
+    padding-bottom: 3%;
+  }
